Move Old Books to Dr Baker's Library

--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 list: true
 styles:
-  - list-old-books.css
+  - list-library.css
 ---
 
   <div class="site-content site-content--zero-top-padding content-canvas">
