--- a/src/_includes/layouts/page-library.njk
+++ b/src/_includes/layouts/page-library.njk
@@ -61,15 +61,15 @@ image:
         <span class="metadata__tags__tag">
           {% if topic in ['Reading', 'Writing', 'Thinking'] %}
           <a href="/{{ t | url }}/">{{ topic }}</a>
-          {% elif topic in ['Old Books'] %}
-          <a href="/reading/{{ t | url }}/">{{ topic }}</a>
+          {% elif topic in ["Dr Baker's Library"] %}
+          <a href="/reading/library/">{{ topic }}</a>
           {% else %}
           <a href="{{ ['/tag/', t] | join | url }}/">{{ topic }}</a>
           {% endif %}
         </span>
           {% if loop.last !== true %}
-        <span class="metadata__divider divider"></span>
-        {% endif %}
+          <span class="metadata__divider divider"></span>
+          {% endif %}
         {% endif %}
         
       {% endfor %}
