Background colour on Dr B's Library index list item

--- a/src/_sass/partials/_elements.scss
+++ b/src/_sass/partials/_elements.scss
@@ -38,6 +38,7 @@ ELEMENTS
     --surface-teal: #{variables.$surface-teal};
     --surface-violet: #{variables.$surface-violet};
     --surface-rose: #{variables.$surface-rose};
+    --surface-rose-darker: #{variables.$french-rose-darker};
     --color-brand-primary: var(--surface-teal);
     --color-brand-secondary: var(--surface-violet);
     --color-brand-white: #{variables.$white};
