--- a/src/_includes/layouts/components/index-list.njk
+++ b/src/_includes/layouts/components/index-list.njk
@@ -8,7 +8,7 @@
       {% set trash = sze.next() %}
       {% endif %}
 
-      <li class="faux-block-link-parent index-list__item index-list__item-{{ loop.index }}{% if loop.first %} index-list__item-first{% endif %} index-list__item-{{ vr }}{% if loop.index != 1 %} index-list__item-{{ sze.next() }}{% endif %}{% if item.data.image.path %} index-list__item--picture{% endif %}">
+      <li class="faux-block-link-parent index-list__item index-list__item-{{ loop.index }}{% if loop.first %} index-list__item-first{% endif %} index-list__item-{{ vr }}{% if loop.index != 1 %} index-list__item-{{ sze.next() }}{% endif %}{% if item.data.image.path %} index-list__item--picture{% endif %}{% if item.data.indexListClass %} {{ item.data.indexListClass }}{% endif %}">
         <div class="index-list__item__content">
           {% if item.data.tags and showTags !== false %}
           {% set itemTags = [] %}
