--- a/src/_sass/common/_variables.scss
+++ b/src/_sass/common/_variables.scss
@@ -20,7 +20,9 @@ $eerie-black-light: color.adjust($eerie-black, $lightness: 20%);
 $eerie-black-pale: color.adjust($eerie-black, $lightness: 80%);
 $english-violet: rgba(74, 64, 99, 100%);      // #4A4063
 $dark-cyan: rgba(85, 134, 140, 100%);         // #55868C
-$french-rose: rgba(247, 85, 144, 100%);       // #F75590
+$french-rose: rgba(140, 86, 114, 100%);       // #8C5672
+
+$french-rose-darker: color.adjust($french-rose, $lightness: -15%);
 
 $champagne: rgba(249, 234, 200, 100%);         // #F9EAC8
 
