hero image background colour

--- a/src/_sass/components/_picture.scss
+++ b/src/_sass/components/_picture.scss
@@ -26,6 +26,7 @@
   z-index: 0;
   height: 60vh;
   overflow: hidden;
+  background-color: var(--surface-black-light);
 
   // img {
   //   block-size: 100%;
