Ooops, supertitle on Dr B's Library page

--- a/src/_includes/layouts/page-library.njk
+++ b/src/_includes/layouts/page-library.njk
@@ -1,8 +1,8 @@
 ---
 layout: base.njk
 sharePage: true
-supertitle: Old Books Friday
-supertitleLinkBack: /reading/old-books/
+supertitle: Dr Baker's Library
+supertitleLinkBack: /library/
 type: oldbooks
 hideDescription: true
 image:
