Fix library page intro text

--- a/src/_includes/layouts/components/title-bar.njk
+++ b/src/_includes/layouts/components/title-bar.njk
@@ -10,7 +10,8 @@
         {% endif %}
         {% if type == 'oldbooks' %}
         <div class="page-title--pre-title">
-          <p class="margin-block-start-vlg margin-block-end-nil">Yeah, sure, there’s loads of new books and all, but do you ever read old books?</p>
+          <p class="margin-block-start-vlg margin-block-end-nil">Yeah, sure, there’s plenty of new books, but do you ever read old books?</p>
+          <p class="margin-block-start-nil margin-block-end-nil">Let's pick one off the shelf.</p>
           <p class="h4-style not-bold margin-block-start-nil">Have you ever read …</p>
         </div>
         {% endif %}
