--- a/src/_sass/components/_page.scss
+++ b/src/_sass/components/_page.scss
@@ -77,6 +77,10 @@
   max-inline-size: var(--size-content-1-2);
 }
 
+.page-title--pre-title {
+  max-inline-size: var(--size-content-1-2);
+}
+
 .page--with-hero {
   padding-block-start: 60vh;
 
