--- a/src/_sass/partials/_elements.scss
+++ b/src/_sass/partials/_elements.scss
@@ -52,6 +52,7 @@ ELEMENTS
     --font-size-fluid-4: clamp(#{variables.$h1-lg-font-size-mobile}, 6vw, #{variables.$h1-lg-font-size});
 
     --size-content-1-1: 30ch;
+    --size-content-1-2: 35ch;
 
     // --gradient-6: conic-gradient(from 90deg at bottom right, black, white);
     
