--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -5,7 +5,7 @@ styles:
   - list-library.css
 ---
 
-  <div class="site-content site-content--zero-top-padding content-canvas">
+  <div class="site-content site-content--zero-top-padding content-canvas-thin">
     
     <div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} jumbotron content-canvas-item-full content-canvas item-fade-in item-fade-in-1-5">
 
@@ -13,7 +13,7 @@ styles:
 
     </div>
     {% if content %}
-    <div class="site-content content-canvas-item-full content-canvas">
+    <div class="site-content content-canvas-item-full content-canvas-thin">
       
       {{ content | safe }}
     </div>
