Better cascading fade animations in lists

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -31,7 +31,7 @@ styles:
 
   </div>
 
-  <div class="site-content content-canvas-item-wide item-fade-in item-fade-in-1-5 item-fade-in-delay-md">
+  <div class="site-content content-canvas-item-wide">
 
     {% include "layouts/components/index-list.njk" %}
 
