--- a/src/_sass/components/_fade-in.scss
+++ b/src/_sass/components/_fade-in.scss
@@ -3,6 +3,7 @@
   animation: fadeInAnimation ease 1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  animation-duration: 1s;
 }
 
 .item-fade-in-1-5 {
@@ -17,25 +18,47 @@
   animation-duration: 3s;
 }
 
+.item-fade-in-delay-1,
 .item-fade-in-delay-sm {
   animation-delay: 0.33s;
 }
 
+.item-fade-in-delay-2,
 .item-fade-in-delay-md {
   animation-delay: 0.67s;
 }
 
+.item-fade-in-delay-3,
 .item-fade-in-delay-mdl {
   animation-delay: 0.85s;
 }
 
+
+.item-fade-in-delay-4,
 .item-fade-in-delay-lg {
   animation-delay: 1.2s;
 }
 
+.item-fade-in-delay-5,
 .item-fade-in-delay-vlg {
-  animation-delay: 1.75s;
+  animation-delay: 1.5s;
 }
+
+.item-fade-in-delay-6 {
+    animation-delay: 1.8s;
+}
+
+.item-fade-in-delay-7 {
+  animation-delay: 2.1s;
+}
+.item-fade-in-delay-8,
+.item-fade-in-delay-9,
+.item-fade-in-delay-10,
+.item-fade-in-delay-11,
+.item-fade-in-delay-12 {
+  animation-delay: 2.5s;
+}
+
 
 @keyframes fadeInAnimation {
   0% {
