--- a/src/_sass/components/_helpers.scss
+++ b/src/_sass/components/_helpers.scss
@@ -4,10 +4,10 @@
 
 // Margin helpers
 .margin-block-start-nil {
-  margin-block-start: var(--size-2) !important;
+  margin-block-start: 0 !important;
 }
 .margin-block-end-nil {
-  margin-block-end: var(--size-2) !important;
+  margin-block-end: 0 !important;
 }
 
 .margin-sml {
