--- a/src/_includes/layouts/components/head-social-cards.njk
+++ b/src/_includes/layouts/components/head-social-cards.njk
@@ -5,6 +5,8 @@
 {% if page.url == '/' %}
 {% set cardTitle %}{{ metadata.title }} — {{ metadata.alt_title }}{% endset %}
 {% set ogType %}website{% endset %}
+{% elif layout == "page-library.njk" %}
+  {% set cardTitle %}Dr B's Library: {{ title }} | {{ metadata.title }} {% endset %}
 {% else %}
 {% set cardTitle %}{{ title }} | {{ metadata.title }}{% endset %}
 {% set ogType %}article{% endset %}
