--- a/src/_sass/components/_content_canvas.scss
+++ b/src/_sass/components/_content_canvas.scss
@@ -6,17 +6,17 @@
   column-gap: var(--size-fluid-1);
   grid-template-columns: 
     [full-start]
-      minmax(0, 2vw)
+      minmax(0, 1fr)
     [wide-start]
       minmax(0, 2vw)
     [main-start]
-      minmax(10ch, calc(#{variables.$break-medium} - 3rem))
+      minmax(10ch, 20ch)
     [main-mid]
-      minmax(10ch, auto)
+      minmax(10ch, 20ch)
     [main-end]
       minmax(0, 2vw)
     [wide-end]
-    minmax(0, 2vw)
+    minmax(0, 1fr)
     [full-end];
   grid-auto-flow: row;
 }
@@ -28,11 +28,11 @@
       [full-start]
         minmax(3vw, 1fr)
       [wide-start]
-        minmax(10vw,  15ch)
+        minmax(10vw, 15ch)
       [main-start]
-        minmax(calc(#{variables.$break-very-small} - 3rem), calc((#{variables.$break-small} - 3rem) * 3 / 5))
+        minmax(15ch, 30ch)
       [main-mid]
-        minmax(20ch, calc((#{variables.$break-small} - 3rem) * 2 / 5))
+        minmax(15ch, 30ch)
       [main-end]
         minmax(10vw, 15ch)
       [wide-end]
