--- a/src/_sass/components/_page.scss
+++ b/src/_sass/components/_page.scss
@@ -113,3 +113,11 @@
     color: var(--surface-1);
   }
 }
+
+// Page layouts
+
+.layout-affiliate {
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: var(--color-dark-cyan);
+}
