--- a/src/_sass/components/_content_canvas.scss
+++ b/src/_sass/components/_content_canvas.scss
@@ -72,6 +72,10 @@
   }
 }
 
+.content-canvas-item-wide-left-main-start {
+  grid-column: wide-left/main-end;
+}
+
 .content-canvas-item-full {
   grid-column: full-start/full-end;
 }
@@ -170,6 +174,10 @@
     grid-column: main-mid/wide-end;
   }
 
+  .content-canvas-item-full-right {
+    grid-column: main-end/full-end;
+  }
+
   .pull-right {
     grid-column: main-mid/main-end;
     grid-row: span 4;
@@ -180,4 +188,17 @@
   .pull-right + * + * + * {
     grid-column: main-start/main-mid;
   }
+
+  .content-canvas-item--span-2 {
+    grid-row: span 2;
+  }
+
+  .content-canvas-item--span-3 {
+    grid-row: span 3;
+  }
+
+  .content-canvas-item--span-4 {
+    grid-row: span 4;
+  }
+
 }
