Qualifier for B.o affiliate links; fix colour backgrounds

--- a/src/_sass/partials/_elements.scss
+++ b/src/_sass/partials/_elements.scss
@@ -49,12 +49,12 @@ ELEMENTS
     --text-alt-1: var(--surface-violet);
     --text-highlight-1: var(--color-dark-cyan);
     --surface-black: var(--color-eerie-black);
-    --surface-black-light: var(--surface-black-light);
-    --surface-black-pale: var(--surface-black-pale);
+    --surface-black-light: var(--color-eerie-black-light);
+    --surface-black-pale: var(--color-eerie-black-pale);
     --surface-teal: var(--color-dark-cyan);
     --surface-violet: var(--color-english-violet);
-    --surface-rose: var(--surface-rose);
-    --surface-rose-darker: var(--surface-rose-darker);
+    --surface-rose: var(--color-french-rose);
+    --surface-rose-darker: var(--color-french-rose-darker);
     --color-brand-primary: var(--surface-teal);
     --color-brand-secondary: var(--surface-violet);
     --color-brand-white: var(--color-white);
