--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -24,4 +24,8 @@ styles:
 
     </div>
 
+    <div class="lower">
+      <p class="small italic">*This site contains affiliate links. As a Bookshop.org affiliate, I earn a little something from qualifying purchases.</p>
+    </div>
+
   </div>
