Add B.o button to Dr B's Library page

--- a/src/_includes/layouts/components/title-bar.njk
+++ b/src/_includes/layouts/components/title-bar.njk
@@ -24,3 +24,8 @@
       {% endif %}
     </div>
   </div>
+{% if layout == 'list-library.njk' %}
+  <div class="link-affiliates">
+    <a href="https://uk.bookshop.org/shop/drbslibrary" target="_blank" rel="noopener noreferrer" class="link-affiliates--link link-affiliates--link-bookshop-org" title="Dr B's Library on Bookshop.org"><span></span></a>
+  </div>
+{% endif %}
