--- a/src/_sass/components/_jumbotron.scss
+++ b/src/_sass/components/_jumbotron.scss
@@ -11,9 +11,11 @@
   }
 
   :where(a) {
-    margin-block:calc(var(--size-00)*-1);
-    margin-inline: calc(var(--size-1)*-1);
-    padding-block:var(--size-00);
-    padding-inline: var(--size-1)
+    &:not(.link-affiliates--link) {
+      margin-block:calc(var(--size-00)*-1);
+      margin-inline: calc(var(--size-1)*-1);
+      padding-block:var(--size-00);
+      padding-inline: var(--size-1)
+    }
 }
 }
