Add a Dr B's Library avatar

--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -3,6 +3,7 @@ layout: base.njk
 list: true
 styles:
   - list-library.css
+  - dbl.css
 ---
 
   <div class="site-content site-content--zero-top-padding content-canvas">
