--- a/src/_sass/dbl.scss
+++ b/src/_sass/dbl.scss
@@ -1,2 +1,41 @@
 // Bookshop.org widgets
 @use "./components/bookshop_org";
+
+.dr-bs-library--list {
+  .page-title {
+    position: relative;
+
+    &::after {
+      display: block;
+      content: " ";
+      position: absolute;
+      top: calc(-1 * var(--size-3));
+      right: calc(-1 * var(--size-5));
+      // right: 0;
+      width: 4rem;
+      height: 4rem;
+      background-image: url("/static/images/dbl-avatar-01.png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.dr-bs-library--page {
+  .title-bar--supertitle {
+    .single-meta-back {
+      &::after {
+        display: block;
+        content: " ";
+        position: absolute;
+        top: calc(-1 * var(--size-3));
+        right: calc(-1 * var(--size-9));
+        width: var(--size-8);
+        height: var(--size-8);
+        background-image: url("/static/images/dbl-avatar-01-circle-bg.png");
+        background-size: contain;
+      }
+    }
+  }
+}
