--- a/src/_sass/components/_bookshop_org.scss
+++ b/src/_sass/components/_bookshop_org.scss
@@ -6,11 +6,17 @@
   align-items: center;
 }
 
-.bookshop-org-widget--book {
-    > * {
-      max-width: 250px;
-    }
+.bookshop-org-widget--book{
+  > * {
+    max-width: 350px;
   }
+}
+
+.bookshop-org-widget--list {
+  > * {
+    max-width: 100%;
+  }
+}
 
 
 @include rt.respond-to('small') {
@@ -18,6 +24,12 @@
     > * {
       max-width: none;
       min-width: 450px;
+    }
+  }
+
+  .bookshop-org-widget--list {
+    > * {
+      width: 100%;
     }
   }
 }
