Better title bar in DBL

--- a/src/_includes/layouts/page-library.njk
+++ b/src/_includes/layouts/page-library.njk
@@ -9,6 +9,14 @@ image:
   caption:
   figureClass:
     page:
+page:
+  intro: "Yeah, sure, new books are great, but do you ever read old books?
+
+
+  Welcome to Dr B's Library.
+
+
+  Have you ever read …{.bold}"
 bookshopOrg:
   widgetChoose: "book"
 styles:
