--- a/src/_sass/dbl.scss
+++ b/src/_sass/dbl.scss
@@ -38,4 +38,11 @@
       }
     }
   }
+
+  .page-title--pre-title {
+    > p {
+      line-height: var(--font-lineheight-1);
+      margin-block: 0.33rem;
+    }
+  }
 }
