--- a/src/_includes/layouts/components/title-bar.njk
+++ b/src/_includes/layouts/components/title-bar.njk
@@ -9,10 +9,8 @@
         <div class="h4-style not-bold uppercase title-bar--supertitle">{% if supertitleLinkBack %}<a href="{{ supertitleLinkBack }}" class="single-meta-back">{{ supertitle | safe }}</a>{% else %}{{ supertitle | safe }}{% endif %}</div>
         {% endif %}
         {% if type == 'oldbooks' %}
-        <div class="page-title--pre-title">
-          <p class="margin-block-start-vlg margin-block-end-nil">Yeah, sure, there’s plenty of new books, but do you ever read old books?</p>
-          <p class="margin-block-start-nil margin-block-end-nil">Welcome to Dr B's Library.</p>
-          <p class="h4-style not-bold margin-block-start-nil">Have you ever read …</p>
+        <div class="page-title--pre-title margin-block-start-vlg secondary-font">
+          {{ page.intro | markdown | safe }}
         </div>
         {% endif %}
         <h1 class="page-title__heading">{{ title | markdown(true) | safe }}</h1>
