--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -4,7 +4,8 @@ section: home
 primary: true
 hideDescription: true
 styles:
-  - home.css
+  internal:
+    - home.css
 ---
 
 <div class="site-content site-content--zero-top-padding content-canvas">
