--- a/src/_includes/layouts/review.njk
+++ b/src/_includes/layouts/review.njk
@@ -2,7 +2,8 @@
 layout: page.njk
 is_review: true
 styles:
-  - reviews.css
+  internal:
+    - reviews.css
 image:
   figClasses:
     - picture--block
