Newsletter subscribe buttons

--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -21,6 +21,10 @@ scripts:
 
       {% include "layouts/components/title-bar.njk" %}
 
+      <div class="newsletter-modal-subscribe">
+        <a href="#newsletter-modal" class="open-modal single-meta-button single-meta-button-narrow margin-block-sml" rel="modal:open" data-modal>Subscribe</a>
+      </div>
+
     </div>
     {% if content %}
     <div class="site-content content-canvas-item-full content-canvas">
