--- a/src/_includes/layouts/components/newsletter-modal.njk
+++ b/src/_includes/layouts/components/newsletter-modal.njk
@@ -1,8 +1,8 @@
 <div id="newsletter-modal" class="do-not-display modal newsletter-modal" aria-hidden="true">
   <div class="newsletter-modal-inner">
     <div class="newsletter-modal-header">
-      <h2 class="newsletter-modal-title">Subscribe</h2>
-      <p>Dr B's Library direct to your inbox.</p>
+      <h2 class="newsletter-modal-title">Get the newsletter</h2>
+      <p>Dr B's Library, direct to your inbox.</p>
     </div>
     <div class="newsletter-modal-form">
     {% include "layouts/components/newsletter-form.njk" %}
