Make affiliate theme list content canvas wide

--- a/src/_includes/layouts/page-library.njk
+++ b/src/_includes/layouts/page-library.njk
@@ -128,7 +128,7 @@ scripts:
 {% endif %}
 
 {% if bookshopOrg.themeList %}
-  <div class="layout-affiliate item-fade-in item-fade-in-1-5 item-fade-in-delay-vlg margin-block-lg padding-block-lg">
+  <div class="layout-affiliate item-fade-in item-fade-in-1-5 item-fade-in-delay-vlg margin-block-lg padding-block-lg content-canvas-item-wide">
     <h3>Like this book? Well, you might also like:</h3>
     <div class="bookshop-org-widge">
       {{ bookshopOrg.themeList | safe }}
